welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: reassignment to val
  a = 1
    ^countTeen:5: error: reassignment to val
  b = 1
    ^countTeen:7: error: reassignment to val
  c = 1
    ^countTeen:9: error: reassignment to val
  d = 1
    ^